--- a/views/bio.erb
+++ b/views/bio.erb
@@ -6,26 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="ico/favicon.png">
 
-    <title>Static Top Navbar Example for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
+    <title>First singing with Sinatra</title>
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="navbar-static-top.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
+   
   </head>
 
   <body>
 
-    <!-- Static navbar -->
+    
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
@@ -44,24 +34,19 @@
             <li><a href="/msg">Message</a></li>
             
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
 
 
     <div class="container">
 
-      <!-- Main component for a primary marketing message or call to action -->
+    
       <div class="jumbotron">
-        <h3> Моя биография</h3>
+        <p> Hi. My name is Rustam. I am from Omsk. I am 20 years old. I study in OmGTU, doing programming and photography. Like basktebol. </p>
       </div>
 
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    </div> 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
