--- a/views/bio.erb
+++ b/views/bio.erb
@@ -1,53 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>First singing with Sinatra</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-   
-  </head>
-
-  <body>
-
-    
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">First singing</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li ><a href="/">Home</a></li>
-            <li class="active"><a href="/bio">Biography</a></li>
-            <li><a href="/hobby">Hobby</a></li>
-            <li><a href="/msg">Message</a></li>
-            
-          </ul>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="container">
-
-    
-      <div class="jumbotron">
-        <p> Hi. My name is Rustam. I am from Omsk. I am 20 years old. I study in OmGTU, doing programming and photography. Like basktebol. </p>
-      </div>
-
-    </div> 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+<p class="lead"> Hi. My name is Rustam. I am from Omsk. I am 20 years old. I study in OmGTU, doing programming and photography. Like basktebol. </p>
